--- a/package.xml
+++ b/package.xml
@@ -43,10 +43,12 @@
   <build_depend>ardrone_autonomy</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>tum_ardrone</build_depend>
   <run_depend>ardrone_autonomy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>tum_ardrone</run_depend>
 
 
